Make use of SequencedCollection API.