@@ -158,7 +158,7 @@ public interface TransformableFigure extends TransformCachingFigure, Figure {
                 transforms.clear();
             }
         } else if (transforms.size() == 1) {
-            if (!Objects.equals(transforms.get(0), t)) {
+            if (!Objects.equals(transforms.getFirst(), t)) {
                 transforms.set(0, t);
             }
         } else {
