@@ -69,7 +69,7 @@ public class SelectionHandle extends LocatorHandle {
             node.resize(size, size);
         }
         CssColor color = view.getEditor().getHandleColor();
-        BorderStroke borderStroke = node.getBorder().getStrokes().get(0);
+        BorderStroke borderStroke = node.getBorder().getStrokes().getFirst();
         if (borderStroke == null || !borderStroke.getTopStroke().equals(color.getColor())) {
             node.setBorder(new Border(
                     new BorderStroke(color.getColor(), INSIDE_STROKE, null, null)
