@@ -86,7 +86,7 @@ public class MacOSFontCollectionsFactory extends DefaultFontCollectionsFactory {
 
             List<LinkedHashMap<String, Object>> plist = (List<LinkedHashMap<String, Object>>) map.getOrDefault("plist", List.of());
             if (plist.isEmpty()) throw new IOException("Could not find a plist. path=" + path);
-            LinkedHashMap<String, Object> plistMap = plist.get(0);
+            LinkedHashMap<String, Object> plistMap = plist.getFirst();
             List<Object> objectsList = (List<Object>) plistMap.getOrDefault("$objects", List.of());
 
             for (Object o : objectsList) {
